--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
-version=0.0.0-SNAPSHOT
-projectName=microservice-template
-packageLastPartName = microservice_template
+version=12.1.0-SNAPSHOT
+projectName=scheduling-abstraction-layer
+packageLastPartName = scheduling-abstraction-layer
