Add all public endpoints and model classes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Configure logging level
-logging.level.org.ow2.proactive.microservice_template=info
+logging.level.org.ow2.proactive.sal.service=info
 logging.level.org.springframework.web=info
 
 # Embedded server configuration
