--- a/build.gradle
+++ b/build.gradle
@@ -85,8 +85,10 @@ sourceSets {
     }
 }
 
+def mainClassName = 'org.ow2.proactive.sal.service.Application'
+
 springBoot {
-    mainClass = 'org.ow2.proactive.microservice.Application'
+    mainClass = mainClassName
 }
 
 war {
@@ -119,6 +121,8 @@ dependencies {
     compile 'com.google.guava:guava'
 
     compile 'com.fasterxml.jackson.core:jackson-databind'
+    compile 'com.fasterxml.jackson.core:jackson-annotations'
+    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
 
     testCompile 'org.hamcrest:hamcrest-junit'
     testCompile 'com.google.truth:truth'
@@ -130,6 +134,30 @@ dependencies {
     testCompile 'com.jayway.restassured:rest-assured'
     testCompile 'org.springframework.boot:spring-boot-starter-test'
 
+    compile group: 'org.apache.commons', name: 'commons-configuration2', version: '2.7'
+    compile group: 'org.ow2.proactive_grid_cloud_portal', name: 'rest-smartproxy', version: "$version"
+    compile group: 'org.ow2.proactive_grid_cloud_portal', name: 'rest-api', version: "$version"
+    compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
+    compile group: 'org.jasypt', name: 'jasypt', version: '1.9.2'
+    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.4.22.Final'
+    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.22.Final'
+    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.1'
+    compile group: 'org.json', name: 'json', version: '20200518'
+    compile group: 'org.javatuples', name: 'javatuples', version: '1.2'
+    compile group: 'com.jcraft', name: 'jsch', version: '0.1.55'
+    compile group: 'org.eclipse.emf', name: 'org.eclipse.emf.common', version: '2.20.0'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
+    compile group: 'org.apache.jclouds.api', name: 'ec2', version: '2.2.1'
+    compile group: 'org.junit.jupiter', name:'junit-jupiter', version: '5.6.2'
+    //    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+    //    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+    //    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.12.1'
+    //    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.1'
+    //    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.12.1'
+
+    //    testCompile group: 'junit', name: 'junit', version: '4.12'
+    //    testImplementation group: 'org.mockito', name: 'mockito-inline', version: '3.7.7'
+    //    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.7.7'
 }
 
 test {
