Set service external configuration file feature

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# Configure the service
+pa.url=http://localhost:8080/
+pa.login=admin
+pa.password=admin
+
 # Configure logging level
 logging.level.org.ow2.proactive.sal.service=info
 logging.level.org.springframework.web=info
@@ -12,3 +17,14 @@ spring.main.banner_mode=off
 # Disable Spring security
 security.basic.enabled=false
 management.security.enabled=false
+
+# The default settings are using mariaDB
+######################## Maria DB #######################################################
+spring.datasource.driverClassName=org.mariadb.jdbc.Driver
+spring.datasource.url=jdbc:mariadb://melodic-store:3306/proactive
+spring.datasource.username=
+# Use tools/encrypt to create an encrypted password
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
