--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,5 +26,8 @@ spring.datasource.username=
 # Use tools/encrypt to create an encrypted password
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
+# Hibernate ddl auto (create, create-drop, update)
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+# Show or not log for each sql query
+spring.jpa.show-sql=false
+logging.level.org.hibernate.SQL=off
