--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,8 +21,8 @@ management.security.enabled=false
 # The default settings are using mariaDB
 ######################## Maria DB #######################################################
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://melodic-store:3306/proactive
-spring.datasource.username=
+spring.datasource.url=jdbc:mariadb://localhost:3306/proactive
+spring.datasource.username=root
 # Use tools/encrypt to create an encrypted password
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
