Fix hibernate issue by decreasing version and fixing default DB dialect

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,9 +25,9 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/proactive
 spring.datasource.username=root
 # Use tools/encrypt to create an encrypted password
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.MariaDB103Dialect
-# Hibernate ddl auto (create, create-drop, update)
-spring.jpa.hibernate.ddl-auto=update
+#For hibernate 5.1 the dialect MariaDBDialect are not available
+#https://stackoverflow.com/questions/37066024/what-is-the-mariadb-dialect-class-name-for-hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 # Show or not log for each sql query
 spring.jpa.show-sql=false
 logging.level.org.hibernate.SQL=off
