--- a/build.gradle
+++ b/build.gradle
@@ -209,8 +209,8 @@ dependencies {
     compile group: 'org.ow2.proactive_grid_cloud_portal', name: 'rest-api', version: "$version"
     compile group: 'commons-beanutils', name: 'commons-beanutils', version: '1.9.4'
     compile group: 'org.jasypt', name: 'jasypt', version: '1.9.2'
-    compile group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.4.22.Final'
-    compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.22.Final'
+    compile group: 'org.hibernate', name: 'hibernate-entitymanager'
+    compile group: 'org.hibernate', name: 'hibernate-core'
     compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.7.1'
     compile group: 'org.json', name: 'json', version: '20200518'
     compile group: 'org.javatuples', name: 'javatuples', version: '1.2'
