--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,31 @@ spring.main.banner_mode=off
 security.basic.enabled=false
 management.security.enabled=false
 
+######################
+#    HIKARI & JPA    #
+######################
+
+# Hibernate ddl auto (create, create-drop, update)
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jmx.unique-names=true
+spring.datasource.pool-name=proactive
+spring.jmx.default-domain=proactive
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+# The classname of a custom org.hibernate.connection.ConnectionProvider which provides JDBC connections to Hibernate
+spring.jpa.hibernate.connection.provider_class=org.hibernate.hikaricp.internal.HikariCPConnectionProvider
+
+# JDBC connection pool configuration
+# https://github.com/brettwooldridge/HikariCP#configuration-knobs-baby
+spring.datasource.connection-timeout=120000
+spring.datasource.maximum-pool-size=20
+spring.datasource.transaction-isolation=TRANSACTION_READ_COMMITTED
+spring.datasource.leak-detection-threshold=600000
+spring.datasource.validation-timeout=20000
+
+# Enable Hibernate's automatic session context management
+spring.jpa.properties.hibernate.current_session_context_class=thread
+
 # The default settings are using mariaDB
 ######################## Maria DB #######################################################
 spring.datasource.driverClassName=org.mariadb.jdbc.Driver
