Fix node model and hibernate communications

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,8 @@ spring.main.banner_mode=off
 security.basic.enabled=false
 management.security.enabled=false
 
+spring.jackson.serialization.fail-on-empty-beans=false
+
 ######################
 #    HIKARI & JPA    #
 ######################
