--- a/build.gradle
+++ b/build.gradle
@@ -173,8 +173,17 @@ dependencies {
     compile 'org.projectlombok:lombok'
     compile 'commons-fileupload:commons-fileupload'
 
+    //Logger
     compile 'org.apache.logging.log4j:log4j-web'
-    compile 'org.springframework.boot:spring-boot-starter-log4j2'
+    compile 'org.apache.logging.log4j:log4j-core'
+    compile 'org.apache.logging.log4j:log4j-web'
+    compile 'org.apache.logging.log4j:log4j-slf4j-impl'
+
+    // This allows log4j logging for spring boot. This dependency is needed for standalone but will
+    // clash with the ProActive Scheduler dependencies when included. It is excluded in configurations above.
+    compile('org.springframework.boot:spring-boot-starter-log4j2') {
+        exclude group: "org.apache.logging.log4j"
+    }
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.hateoas:spring-hateoas'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
