Fix hibernate upgrade to 5.2.18 changes

--- a/sal-service/src/main/resources/application.properties
+++ b/sal-service/src/main/resources/application.properties
@@ -54,8 +54,9 @@ spring.datasource.username=root
 # Use tools/encrypt to create an encrypted password
 spring.datasource.password=
 #For hibernate 5.1 the dialect MariaDBDialect are not available
+#For hibernate 5.2 the dialect MariaDB53Dialect should be used
 #https://stackoverflow.com/questions/37066024/what-is-the-mariadb-dialect-class-name-for-hibernate
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MariaDB53Dialect
 # Show or not log for each sql query
 spring.jpa.show-sql=false
 logging.level.org.hibernate.SQL=off
