Fix packageLastPartName value in gradle.properties file

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,3 @@
 version=13.1.0-SNAPSHOT
 projectName=scheduling-abstraction-layer
-packageLastPartName = scheduling-abstraction-layer
+packageLastPartName=scheduling-abstraction-layer
