--- a/sal-common/build.gradle
+++ b/sal-common/build.gradle
@@ -6,12 +6,14 @@ dependencies {
     compile group: 'org.ow2.proactive_grid_cloud_portal', name: 'rest-smartproxy', version: "$version"
     compile group: 'org.ow2.proactive_grid_cloud_portal', name: 'rest-api', version: "$version"
 
-    compile 'com.fasterxml.jackson.core:jackson-databind'
-    compile 'com.fasterxml.jackson.core:jackson-annotations'
-    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.15.1'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.15.1'
+    compile 'com.fasterxml.jackson.dataformat:jackson-dataformat-csv:2.15.1'
 
     compile group: 'org.hibernate', name: 'hibernate-entitymanager'
     compile group: 'org.hibernate', name: 'hibernate-core'
+
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     compile group: 'org.eclipse.emf', name: 'org.eclipse.emf.common', version: '2.20.0'
 
