--- a/sal-service/build.gradle
+++ b/sal-service/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     }
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.hateoas:spring-hateoas'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     compile 'io.springfox:springfox-spring-web'
     compile 'io.springfox:springfox-swagger2'
