Fix build and disable parent-bom cache

--- a/build.gradle
+++ b/build.gradle
@@ -90,6 +90,9 @@ allprojects {
         imports {
             mavenBom "org.ow2.proactive:parent-bom:${version}"
         }
+        resolutionStrategy {
+            cacheChangingModulesFor 0, 'seconds'
+        }
     }
 
     dependencies {
