--- a/docker/Dockerfile.release
+++ b/docker/Dockerfile.release
@@ -13,6 +13,7 @@ ENV PA_HOME=${CATALINA_HOME}
 COPY  docker/scheduling-abstraction-layer.xml ${EXTERNAL_CONFIG_DIR}/Catalina/localhost/sal.xml
 # NOTE: Please make sure if you set a different `PROPERTIES_FILENAME` to copy your properties file inside the container
 COPY  docker/sal.application.properties ${EXTERNAL_CONFIG_DIR}/${PROPERTIES_FILENAME}.properties
+COPY docker/wait_for_db.sh /usr/local/tomcat/bin
 
 ENV PWS_URL='http://localhost:8080/'
 ENV PWS_USERNAME='admin'
@@ -25,5 +26,7 @@ ENV DB_DRIVER_CLASSNAME='org.mariadb.jdbc.Driver'
 ENV DB_URL='jdbc:mariadb://localhost:3306/proactive'
 ENV DB_PLATFORM='org.hibernate.dialect.MariaDB53Dialect'
 
-CMD ["catalina.sh", "jpda", "run"]
+RUN yum install -y nmap-ncat
+RUN chmod +x /usr/local/tomcat/bin/wait_for_db.sh
+CMD ["/bin/bash", "-c", "wait_for_db.sh && catalina.sh jpda run"]
 
