--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -39,6 +39,8 @@ services:
       DB_USERNAME: root
       DB_PASSWORD: PASSWORD
       DB_DRIVER_CLASSNAME: org.mariadb.jdbc.Driver
+      DB_PORT: 3306
+      DB_HOSTNAME: myComposeMariaDB
       DB_URL: jdbc:mariadb://myComposeMariaDB:3306/proactive
       DB_PLATFORM: org.hibernate.dialect.MariaDB53Dialect
       JPDA_ADDRESS: 9001
