--- a/docker/Dockerfile.win
+++ b/docker/Dockerfile.win
@@ -27,7 +27,7 @@ ENV DB_URL='jdbc:mariadb://localhost:3306/proactive'
 ENV DB_PLATFORM='org.hibernate.dialect.MariaDB53Dialect'
 
 CMD ["catalina.sh", "jpda", "run"]
-RUN yum install -y nmap-ncat
-RUN chmod +x /usr/local/tomcat/bin/wait_for_db.sh
-CMD ["/bin/bash", "-c", "wait_for_db.sh && catalina.sh jpda run"]
+#RUN yum install -y nmap-ncat
+#RUN chmod +x /usr/local/tomcat/bin/wait_for_db.sh
+#CMD ["/bin/bash", "-c", "wait_for_db.sh && catalina.sh jpda run"]
 
