--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   database:
-    image: mariadb
+    image: mariadb #optionaly set specific version e.g. mariadb:10.7
     ports:
       - "3307:3306"
     networks:
@@ -15,9 +15,13 @@ services:
       timeout: 5s
       retries: 5
   sal:
+    #Set up image to be used for SAL from https://hub.docker.com/r/activeeon/sal/tags
     image: activeeon/sal:test
     build:
       context: ..
+      #Set up Dockerfile to be used:
+      #Dockerfile is used for Jenkins image creation
+      #Dockerfile.win to be used for local build on Windows
       dockerfile: ./docker/Dockerfile
     depends_on:
       database:
@@ -33,6 +37,7 @@ services:
       - ./scripts:/usr/local/tomcat/scripts
     environment:
       PROPERTIES_FILENAME: sal
+      #Set up connection to ProActive server (PWS)
       PWS_URL: <CHANGE_ME>
       PWS_USERNAME: <CHANGE_ME>
       PWS_PASSWORD: <CHANGE_ME>
