--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -27,7 +27,9 @@ services:
       database:
         condition: service_healthy
     ports:
+      #Port for sal service
       - "8088:8080"
+      #Port for sal-pda debugging service
       - "9001:9001"
     links:
       - "database:myComposeMariaDB"
