--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,24 +1,27 @@
 services:
   database:
-    image: mariadb
+    #  image: mariadb
+    image: mariadb:10.7
     ports:
       - "3307:3306"
     networks:
       - db-tier
     environment:
-      MYSQL_ROOT_PASSWORD: PASSWORD
+      #  MYSQL_ROOT_PASSWORD: PASSWORD
+      MYSQL_ROOT_PASSWORD: activeeon
       MYSQL_DATABASE: proactive
     container_name: myComposeMariaDB
     healthcheck:
-      test: [ "CMD", "mariadb-admin" , "ping", "-h", "localhost", "--password=PASSWORD" ]
+      #  test: [ "CMD", "mariadb-admin" , "ping", "-h", "localhost", "--password=PASSWORD" ]
+      test: [ "CMD", "mariadb-admin" , "ping", "-h", "localhost", "--password=activeeon" ]
       interval: 5s
       timeout: 5s
       retries: 5
   sal:
-    image: activeeon/sal:test
-    build:
-      context: ..
-      dockerfile: ./docker/Dockerfile
+    image: activeeon/sal:debug
+    # build:
+   #   context: ..
+   #   dockerfile: ./docker/Dockerfile
     depends_on:
       database:
         condition: service_healthy
@@ -33,11 +36,27 @@ services:
       - ./scripts:/usr/local/tomcat/scripts
     environment:
       PROPERTIES_FILENAME: sal
-      PWS_URL: <CHANGE_ME>
-      PWS_USERNAME: <CHANGE_ME>
-      PWS_PASSWORD: <CHANGE_ME>
+      #PWS_URL: <CHANGE_ME>
+      #PWS_USERNAME: <CHANGE_ME>
+      #PWS_PASSWORD: <CHANGE_ME>
+
+      #---- trydev ------
+      #PWS_URL: https://trydev.activeeon.com:8443/
+      #PWS_USERNAME: benguigui
+      #PWS_PASSWORD: ProActive123
+
+      #---- local ------
+      PWS_URL: http://192.168.1.34:8080/
+      PWS_USERNAME: admin
+      PWS_PASSWORD: admin
+
+      #---- NREC ------
+      #PWS_URL: http://158.39.77.68:8880/
+      #PWS_USERNAME: admin
+      #PWS_PASSWORD: admin
+
       DB_USERNAME: root
-      DB_PASSWORD: PASSWORD
+      DB_PASSWORD: activeeon
       DB_DRIVER_CLASSNAME: org.mariadb.jdbc.Driver
       DB_PORT: 3306
       DB_HOSTNAME: myComposeMariaDB
