Dockerfile aligment with Dockerfile.release

--- a/docker/Dockerfile.win
+++ b/docker/Dockerfile.win
@@ -2,9 +2,9 @@ FROM tomcat:9.0.68-jdk8-corretto-al2
 
 RUN rm -rf ${CATALINA_HOME}/webapps/*
 # NOTE: Switch between local or public builded SAL
-RUN curl -o /usr/local/tomcat/webapps/sal.war http://repository.activeeon.com/content/groups/proactive/org/ow2/proactive/scheduling-abstraction-layer/13.1.0-SNAPSHOT/scheduling-abstraction-layer-13.1.0-20221027.125525-9.war
+#RUN curl -o /usr/local/tomcat/webapps/sal.war http://repository.activeeon.com/content/groups/proactive/org/ow2/proactive/scheduling-abstraction-layer/13.1.0-SNAPSHOT/scheduling-abstraction-layer-13.1.0-20221027.125525-9.war
 COPY sal-service/build/libs/scheduling-abstraction-layer-*.war /usr/local/tomcat/webapps/sal.war
-
+COPY docker/scripts/* /usr/local/tomcat/scripts/
 ENV EXTERNAL_CONFIG_DIR=${CATALINA_HOME}/conf
 ENV PROPERTIES_FILENAME='sal'
 
