--- a/deployment/sal.yaml
+++ b/deployment/sal.yaml
@@ -67,7 +67,7 @@ spec:
             - name: PROPERTIES_FILENAME
               value: sal
             - name: PWS_URL
-              value: <PROACTIVE_URL>
+              value: <PROACTIVE_URLVALUE>
             - name: PWS_USERNAME
               value: <PROACTIVE_USERNAME>
             - name: PWS_PASSWORD
