--- a/.gitignore
+++ b/.gitignore
@@ -210,7 +210,7 @@ gradle-app.setting
 ### Docker ###
 
 # Ignore docker-compose
-**/docker-compose*.yaml
+#**/docker-compose*.yaml
 # **/docker-compose.yaml
 
 
