--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -54,7 +54,14 @@ services:
       DB_PLATFORM: org.hibernate.dialect.MariaDB53Dialect
       JPDA_ADDRESS: 9001
       JPDA_TRANSPORT: dt_socket
-    entrypoint: [ "/bin/sh", "-c", "if [ -f /usr/local/tomcat/bin/wait_for_db.sh ]; then /usr/local/tomcat/bin/wait_for_db.sh; fi && catalina.sh run" ]
+    entrypoint: [
+      "/bin/sh",
+      "-c",
+      "chmod +x /usr/local/tomcat/bin/wait_for_db.sh && \
+      if [ -f /usr/local/tomcat/bin/wait_for_db.sh ]; then /usr/local/tomcat/bin/wait_for_db.sh; fi && \
+      export JPDA_OPTS='-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=0.0.0.0:9001' && \
+      catalina.sh jpda run"
+    ]
     container_name: myComposeSAL
 networks:
   db-tier: {}
